# qrmingle

./: .env  .gitignore  .replit  CHANGELOG.md  CLAUDE.md  CODEBASE_MAP.md  README.md  RELEASES.md  capacitor.config.ts  data-store.json  drizzle.config.ts  manual_test.py  package-lock.json  package.json  pyproject.toml  railway.toml  replit.nix  run.py  run_gunicorn.py  run_server.py  start_both_servers.sh  start_gunicorn.sh  start_python_server.sh  start_python_workflow.sh  start_servers.sh  test_auth.py  test_flask_app.py  test_python_env.py  theme.json  tmp.html  vitest.config.ts
client/: index.html  test-main.jsx
client/public/: app.js  custom.js  direct.html  index.html  original-home.html  production-redirect.html  profile.html  react-app.html  react-fallback.html  redirect.html  test.html
client/src/: App.tsx  App.tsx.e7e458b  TestApp.tsx  index.css  main.tsx
ios/: XCODE_SETUP.md
ios/App/: Podfile
ios/app-store-assets/: README.md  apple-watch-setup.md  deployment-guide.md  submission-checklist.md
python_server/: __init__.py  app.py
python_server/api/: __init__.py  auth_routes.py  profile_routes.py  upload_routes.py
python_server/auth/: __init__.py  auth.py
python_server/models/: __init__.py  models.py
replit_agent/: architecture.md
scripts/: add-reset-tokens-table.ts  add-theme-columns.ts  convert-icons-to-png.js  generate-app-icons.js  generate-icons.js
server/: auth.ts  db.ts  direct-route.ts  index.ts  limiters.ts  middleware.ts  routes-addition.ts  routes.ts  sendgrid.ts  static-route.ts  storage.ts
shared/: schema.ts
(+80 files in other folders)
